--- a/public/css/presentation.css
+++ b/public/css/presentation.css
@@ -10,7 +10,7 @@
 
 #pres-content {
   width: 100%;
-  height: 50%;
+  height: 65%;
 }
 
 #pres-info {
@@ -43,7 +43,7 @@
   height: 25px;
   display: flex;
   justify-content: center;
-  margin-top: 65px;
+  margin-top: 60px;
   align-items: center;
 }
 
@@ -63,7 +63,7 @@
   margin-top: 0;
   font-family: 'Roboto Mono', monospace;
 	font-weight: 900;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 #smaller-title {
@@ -93,3 +93,6 @@
   height: 30%;
 }
 
+#alternative-h3 {
+  display: none;
+}
